fix: overlaping in the minicart and the close button

--- a/styles/css/global/minicart/vtex.minicart.css
+++ b/styles/css/global/minicart/vtex.minicart.css
@@ -63,3 +63,8 @@
         min-width: 360px !important;
     }
 }
+
+.closeIconButton {
+    border-radius: 40px;
+    background-color: #F5F4F6;
+}
